--- a/angular.json
+++ b/angular.json
@@ -26,7 +26,8 @@
             ],
             "styles": [
               "src/styles.css"
-            ]
+            ],
+            "scripts": ["node_modules/preline/dist/index.js"]
           },
           "configurations": {
             "production": {
