--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@angular/build": "^21.0.4",
     "@angular/cli": "^21.0.4",
     "@angular/compiler-cli": "^21.0.0",
+    "@iconify-json/devicon-plain": "^1.2.51",
     "@iconify-json/tabler": "^1.2.26",
     "@iconify/tailwind4": "^1.2.0",
     "@tailwindcss/forms": "^0.5.11",
