--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -31,17 +31,17 @@ jobs:
 
       # 3️⃣ Build Angular (ajusta el base-href según tu repo)
       - name: Build Angular
-        run: npm run build -- --configuration production --base-href "/portfolio/"
+        run: npm run build -- --configuration production --base-href "/${{ github.event.inputs.projectName }}/"
         env:
           MAPBOX_TOKEN: ${{ secrets.MAPBOX_TOKEN }}
 
       # 4️⃣ Copiar index.html a 404.html
       - name: Copiar index.html a 404.html
-        run: cp ./dist/08-maps-app/browser/index.html ./dist/08-maps-app/browser/404.html        
+        run: cp ./dist/08-maps-app/browser/index.html ./dist/${{ github.event.inputs.projectName }}/browser/404.html        
 
       # 5️⃣ Deploy a GitHub Pages
       - name: Deploy a GitHub Pages
         uses: peaceiris/actions-gh-pages@v4
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: ./dist/08-maps-app/browser
+          publish_dir: ./dist/${{ github.event.inputs.projectName }}/browser
