--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,6 +2,10 @@ name: Deploy Angular to GitHub Pages
 
 on:
   workflow_dispatch:
+    inputs:
+        projectName:
+          description: 'Nombre del proyecto'
+          required: true
 permissions:
   contents: write
 
