--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,16 +23,6 @@ jobs:
       - name: Instalar dependencias
         run: npm ci
 
-      # 2️⃣ Crear environment.ts
-      - name: Crear environment.ts para Angular
-        run: |
-          mkdir -p src/environments
-          cat > src/environments/environment.ts <<EOL
-          export const environment = {
-            mapboxKey: '${{ secrets.MAPBOX_TOKEN }}'
-          };
-          EOL
-
       # 3️⃣ Build Angular (ajusta el base-href según tu repo)
       - name: Build Angular
         run: npm run build -- --configuration production --base-href "/${{ github.event.inputs.projectName }}/"
@@ -41,7 +31,7 @@ jobs:
 
       # 4️⃣ Copiar index.html a 404.html
       - name: Copiar index.html a 404.html
-        run: cp ./dist/08-maps-app/browser/index.html ./dist/${{ github.event.inputs.projectName }}/browser/404.html        
+        run: cp ./dist//${{ github.event.inputs.projectName }}/browser/index.html ./dist/${{ github.event.inputs.projectName }}/browser/404.html        
 
       # 5️⃣ Deploy a GitHub Pages
       - name: Deploy a GitHub Pages
